# ai-training

./: .gitignore  CONTRIBUTORS  README.md  florins-notes.md  go.mod  go.sum  makefile  pydeps.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cmd/cleaner/: main.go
cmd/connect/ai/: ai.go  parse.go
cmd/connect/board/: board.go  keyboard.go
cmd/connect/game/: game.go  state.go
cmd/connect/training-data/: 1c73ba7c-5356-4d98-95be-ed33207fd526.txt  1ed90982-4ecc-46ad-acff-c45e2ee1504b.txt  390322d3-396e-4ef0-bac3-452aa97fc6b1.txt  4c3bfd64-1e86-40a5-8a0d-b29c8d9759a0.txt  53a3e5f0-fd38-49fe-8f57-8c2890441cb9.txt  6c375ed7-62ee-4cc2-adac-fea349292e1c.txt  7c5c47bd-5198-4488-9910-51b545d066df.txt  7cd113f0-66ef-48c3-9aa7-a2cb2b9ce25e.txt  cc726554-7e8e-4ef1-abc2-0ea1c5b83435.txt  e6eedadb-500a-4363-b4f7-adddf2964449.txt  efa23be5-5055-463f-9122-90747dd035e9.txt
cmd/embedding/: embedding.py  requirements.txt
cmd/examples/example01/: main.go
cmd/examples/example02/: main.go
cmd/examples/example03/: main.go
cmd/notes/: todo.md
foundation/audio/: audio.go  audio_darwin.go  audio_linux.go  whisper.go
foundation/client/: client.go  llm.go  model.go
foundation/docling/: docling.go
foundation/mongodb/: model.go  mongodb.go
foundation/sqldb/: sqldb.go
foundation/tiktoken/: bpe.go  core_bpe.go  encoding.go  tiktoken.go
foundation/tools/: tools.go
foundation/vector/: vector.go
zarf/data/: book.chunks  book.txt
zarf/docker/: compose.all.yaml  compose.docling.yaml  compose.owu.yaml  compose.yaml
zarf/kms/: model_config.yaml
(+157 files in other folders)
