[project]
name = "ai-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "cachetools",
    "charset-normalizer",
    "cloudpickle",
    "compressed-tensors",
    "email-validator",
    "fastapi-cli",
    "fastapi-cloud-cli",
    "frozendict",
    "frozenlist",
    "huggingface-hub",
    "idna",
    "interegular",
    "jinja2",
    "jiter",
    "jsonschema",
    "jsonschema-specifications",
    "llguidance",
    "lm-format-enforcer",
    "markdown-it-py",
    "markupsafe",
    "mistral-common",
    "mlx-metal",
    "multidict",
    "openai-harmony",
    "opencv-python-headless",
    "outlines-core",
    "packaging",
    "partial-json-parser",
    "pillow",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "py-cpuinfo",
    "pycparser",
    "pydantic-core",
    "pydantic-extra-types",
    "python-dotenv",
    "python-json-logger",
    "python-multipart",
    "referencing",
    "requests",
    "rich-toolkit",
    "safetensors",
    "sentencepiece",
    "sentry-sdk",
    "setproctitle",
    "setuptools",
    "shellingham",
    "tokenizers",
    "torchaudio",
    "torchvision",
    "transformers",
    "typing-extensions",
    "typing-inspection",
    "watchfiles",
    "websockets",
    "yarl",
]
